# k_quirc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: validate.yml
include/: k_quirc.h
scripts/: format.sh
src/: k_quirc.c  k_quirc_decode.c  k_quirc_identify.c  k_quirc_internal.h  k_quirc_version.c
test/: CMakeLists.txt  README.md  test_api.c  test_decode.c
test/stubs/: esp_log.h
test/stubs/freertos/: FreeRTOS.h  task.h
test/validation/: README.md  known_failures.txt  run_validation.py
